--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+absl-py==0.9.0
+astunparse==1.6.3
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.5
 Brotli==1.0.7
+cachetools==4.1.0
+certifi==2020.4.5.2
+chardet==3.0.4
 click==7.1.2
+cycler==0.10.0
 dash==1.12.0
 dash-core-components==1.10.0
 dash-html-components==1.0.3
@@ -14,6 +20,13 @@ entrypoints==0.3
 Flask==1.1.2
 Flask-Compress==1.5.0
 future==0.18.2
+gast==0.3.3
+google-auth==1.16.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.29.0
+h5py==2.10.0
+idna==2.9
 importlib-metadata==1.6.1
 ipykernel==5.3.0
 ipython==7.15.0
@@ -25,12 +38,18 @@ joblib==0.15.1
 jsonschema==3.2.0
 jupyter-client==6.1.3
 jupyter-core==4.6.3
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+Markdown==3.2.2
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.6
 notebook==6.0.3
 numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.2.1
 packaging==20.4
 pandas==1.0.4
 pandocfilters==1.4.2
@@ -41,26 +60,39 @@ Pillow==7.1.2
 plotly==4.8.1
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
+protobuf==3.12.2
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.1
+requests==2.23.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
 rise==5.6.1
+rsa==4.0
 scikit-learn==0.23.1
 scipy==1.4.1
 Send2Trash==1.5.0
 six==1.15.0
 sklearn==0.0
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.0.4
 traitlets==4.3.3
+urllib3==1.25.9
 wcwidth==0.2.3
 webencodings==0.5.1
 Werkzeug==1.0.1
+wrapt==1.12.1
 zipp==3.1.0
